update ENV directives