@@ -12,8 +12,15 @@ RUN apt-get update -y \
 WORKDIR /home/jboss
 USER jboss
 EXPOSE 8080
-ENV JBOSS_VERSION="${JBOSS_VERSION_ARG}" \
-    JBOSS_HOME="/home/jboss/jboss-${JBOSS_VERSION}"
+ENV JBOSS_VERSION="${JBOSS_VERSION_ARG}"
+ENV JBOSS_HOME="/home/jboss/jboss-${JBOSS_VERSION}"
+ENV JAVA_OPTS="$JAVA_OPTS \
+-Djboss.bind.address=0.0.0.0 \
+-Djboss.bind.address.management=0.0.0.0 \
+-Djava.net.preferIPv4Stack=true \
+-XX:+UnlockExperimentalVMOptions \
+-XX:+UseCGroupMemoryLimitForHeap \
+-XshowSettings:vm"
 CMD /bin/bash
 ENTRYPOINT /bin/bash ${JBOSS_HOME}/bin/run.sh
 RUN wget --no-check-certificate \
@@ -33,3 +40,4 @@ RUN wget --no-check-certificate \
 # EXPOSE 5005                                                                                   #
 # COPY --chown=jboss target/*.war ${JBOSS_HOME}/default/deploy/                                 #
 #################################################################################################
+
